src/styles/globals.css
@import url('https://fonts.googleapis.com/css2?family=Sora:wght@200;300;700&display=swap');
* {
	box-sizing: border-box;
	padding: 0;
	margin: 0;
}
:root {
	--main-color: #4169e1;
	--main-color-darker: #1e47c2;
	--main-color-darkest: #0a2370;
	--main-color-lighter: #406bee;
	--main-color-lightest: #7f9cf3;
	--purple: #061c60;
	--white: #fff;
}
html {
	font-size: 62.5%;
	scroll-behavior: smooth;
	scrollbar-width: thin;
	scrollbar-color: var(--main-color-darker), var(--main-color);
}
html::-webkit-scrollbar {
	width: 0.5vw;
}
html::-webkit-scrollbar-thumb {
	background-color: #ffffff;
	border-radius: 100vw;
}
html::-webkit-scrollbar-thumb:hover {
	background-color: var(--main-color-lightest);
}
html::-webkit-scrollbar-track {
	background: var(--main-color-darker);
}

body {
	font-family: 'Sora', sans-serif;
}
main {
	margin-top: 7vh;
	z-index: -2;
}
section {
	overflow-x: hidden;
}
a {
	text-decoration: none;
}

